--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -31,5 +31,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Run build
+        run: npm run build
+      
       - name: Run deploy
-        run: npm run deploy --tag=${{ steps.get_version.outputs.version-without-v }}
+        run: npx np ${{ steps.get_version.outputs.version-without-v }} --any-branch
