--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -3,7 +3,7 @@ name: Github Actions - Release
 # Run on every commit tag which begins with "v" (e.g. v1.0.1)
 on:
   push:
-    tag:
+    tags:
       - "v*" 
 
 jobs:
