--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -15,7 +15,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref_type == 'tag' && github.event.base_ref=='refs/heads/main' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
