--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -15,8 +15,11 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    if: ${{ github.ref_type == 'tag' && github.event.base_ref=='refs/heads/main' }}
     steps:
+      - name: Message
+        run: echo "Hello user, I am triggered because of tag ${{github.ref_type}} push in branch ${{ github.event.base_ref }} "
+        shell: bash
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
