--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -15,9 +15,10 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+    # if: ${{ github.ref_type == 'tag' && github.ref=='refs/heads/main' }}
     steps:
       - name: Message
-        run: echo "Hello user, I am triggered because of tag ${{github.ref_type}} push in branch ${{ github.event.base_ref }} "
+        run: echo "Hello user, I am triggered because of tag ${{github.ref_type}} push in branch ${{ github.ref }} "
         shell: bash
 
       - name: Checkout Repository
