--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -18,7 +18,7 @@ jobs:
     # if: ${{ github.ref_type == 'tag' && github.ref=='refs/heads/main' }}
     steps:
       - name: Message
-        run: echo "Hello user, I am triggered because of tag ${{github.ref_type}} push in branch ${{ github.ref }} "
+        run: echo "Hello user, I am triggered because of tag ${{github.ref_type}} push in branch ${{ github.base_ref }} "
         shell: bash
 
       - name: Checkout Repository
