--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -1,6 +1,6 @@
 name: Github Actions - Release
 
-# Run on every commit tag which begins with "v" (e.g. v1.0.1)
+# Run on every commit tag (e.g. 1.0.1)
 on:
   push:
     tags:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    name: Run Deploy
+    name: Publish new library version
 
     runs-on: ubuntu-latest
 
@@ -27,10 +27,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-
-      - name: Get version tag
-        id: get_version
-        uses: battila7/get-version-action@v2
 
       - name: Install dependencies
         run: npm ci
