--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -24,10 +24,18 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get Branch
+        uses: allenevans/set-env@v2.0.0
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
           branch=${raw/origin\/}
-          echo ::set-env name=BRANCH::$branch
+        with:
+          MY_ENV_VAR: $branch
+
+      - name: Printenv
+        run: |
+          echo "MY_ENV_VAR=${MY_ENV_VAR}"
+          printenv
+          
       - run: echo ${{ env.BRANCH }}
 
       - name: Setup Node JS
