--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
           branch=${raw/origin\/}
-          echo "BRANCH=test" >> $GITHUB_ENV
+          echo "BRANCH=$raw" >> $GITHUB_ENV
 
       - run: echo ${{ env.BRANCH }}
 
