--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
           branch=${raw/origin\/}
+          echo raw
+          echo $raw
           echo "BRANCH=$raw" >> $GITHUB_ENV
 
       - run: echo ${{ env.BRANCH }}
