--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Get Branch
         env:
-          BRANCH_RAW: $(git branch -r --contains ${{ github.ref }})
+          BRANCH_RAW: ${{ git branch -r --contains ${{ github.ref }} }}
         run: |
           echo "BRANCH=${BRANCH_RAW}" >> $GITHUB_ENV
           echo "set BRANCH to ${BRANCH_RAW}"
