--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -24,11 +24,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get Branch
-        env:
-          BRANCH_RAW: ${{ git branch -r --contains ${{ github.ref }} }}
         run: |
-          echo "BRANCH=${BRANCH_RAW}" >> $GITHUB_ENV
-          echo "set BRANCH to ${BRANCH_RAW}"
+          raw=$(git branch -r --contains ${{ github.ref }})
+          branch=${raw/origin\/}
+          echo 'BRANCH='$raw >> $GITHUB_ENV
 
       - run: echo ${{ env.BRANCH }}
 
