--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -22,11 +22,13 @@ jobs:
 
       - name: Checkout Repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set Branch
         run: |
-          branch_raw=$(echo $(git branch -r --contains ${{ github.ref }}))
-          branch=${branch_raw/origin\/}
+          branch_raw=$(git branch -r --contains ${{ github.ref }})
+          branch=${raw##*/}
           branch_test=test
           echo "BRANCH_RAW=$(echo ${branch_raw})" >> $GITHUB_ENV
           echo "BRANCH_TEST=$(echo ${branch_test})" >> $GITHUB_ENV
